--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   awesome_dialog: ^2.1.2
   firebase_core: ^1.13.1
   cloud_firestore: ^3.1.10
+  firebase_auth: ^3.3.12
   
 
 dev_dependencies:
