--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   provider: ^6.0.3
   numberpicker: ^2.1.1
   get: ^4.6.5
+  sqflite: ^2.0.2+1
+  path_provider: ^2.0.10
   
 
 dev_dependencies:
