--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   get: ^4.6.5
   sqflite: ^2.0.2+1
   path_provider: ^2.0.10
+  rive: ^0.9.0
   
 
 dev_dependencies:
@@ -76,6 +77,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - lib/assets/images/
+    - lib/assets/animasyon/
     - lib/assets/gif/bacakKaslari/
     - lib/assets/gif/gogusKaslari/
     - lib/assets/gif/karinKaslari/
